[gd_scene load_steps=3 format=3 uid="uid://buh4m7nppa67l"]

[ext_resource type="Script" path="res://get_list_model.gd" id="1_xgow8"]

[sub_resource type="LabelSettings" id="LabelSettings_6qyb2"]
font_color = Color(1, 0, 0, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xgow8")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "List Models/Get Model"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VersionOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "v1"
popup/item_0/id = 0
popup/item_1/text = "v1beta"
popup/item_1/id = 1

[node name="ListModelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "List models"

[node name="ModelOptionButton" type="OptionButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="ModelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Get model"

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Response"

[node name="FinishedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_6qyb2")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ResponseEdit" type="TextEdit" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(250, 280)
layout_mode = 2
size_flags_horizontal = 3
editable = false
wrap_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ListModelButton" to="." method="_on_list_model_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ModelButton" to="." method="_on_model_button_pressed"]
